fix: add missing position property to z-indexed container (#59)

--- a/src/_index.scss
+++ b/src/_index.scss
@@ -21,11 +21,6 @@ button {
   font-size: inherit;
 }
 
-.vrsStyleWrapper {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
-}
-
 .vrsSearchButton {
   display: flex;
   width: 100%;
